# despot

./: .gitignore  .gitmodules  CMakeLists.txt
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/laser_tag/: .catkin  .rosinstall  local_setup.sh
devel/.private/youbot_description/: .catkin  .rosinstall  setup.sh
devel/.private/youbot_gazebo_control/: .catkin  .rosinstall  setup.sh
devel/.private/youbot_gazebo_robot/: .catkin
devel/.private/youbot_gazebo_worlds/: .catkin  local_setup.sh
devel/include/laser_tag/: TagActionObs.h  TagActionObsRequest.h  TagActionObsResponse.h  YoubotActionObs.h  YoubotActionObsRequest.h  YoubotActionObsResponse.h
devel/lib/laser_tag/: laser_tag_controller  pomdp_planner  test_laser_tag_controller  youbot_interface
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  laser_tag.pc  youbot_description.pc  youbot_gazebo_control.pc  youbot_gazebo_robot.pc  youbot_gazebo_worlds.pc
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
examples/cpp_models/ACheckers/: CMakeLists.txt
examples/cpp_models/ACheckers/src/: ACheckers.cpp  ACheckers.h  base_ACheckers.cpp  base_ACheckers.h  main.cpp
examples/cpp_models/ACheckers/src/firsttest/: ACheckers.cpp  ACheckers.h
examples/pomdpx_models/: pomdpx
(+68 files in other folders)
